--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  background-color: hsl(180 30% 80% / 1);
+  font-family: "Roboto", sans-serif;
+}
